--- a/app/src/main/res/layout/fragment_modify_account.xml
+++ b/app/src/main/res/layout/fragment_modify_account.xml
@@ -60,7 +60,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:hint="@string/hint_change_username"
-            app:layout_constraintBottom_toTopOf="@+id/email_text_input_layout"
+            app:layout_constraintBottom_toTopOf="@+id/sex_text_input_layout"
             app:layout_constraintTop_toBottomOf="@+id/height_text_input_layout"
             app:layout_constraintStart_toStartOf="@+id/guideline_left"
             app:layout_constraintEnd_toEndOf="@+id/guideline_right">
@@ -72,28 +72,32 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/email_text_input_layout"
+            android:id="@+id/sex_text_input_layout"
+            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="@string/hint_change_email"
             app:layout_constraintBottom_toTopOf="@+id/new_password_text_input_layout"
             app:layout_constraintTop_toBottomOf="@+id/username_text_input_layout"
             app:layout_constraintStart_toStartOf="@+id/guideline_left"
             app:layout_constraintEnd_toEndOf="@+id/guideline_right">
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/email_input"
+            <AutoCompleteTextView
+                android:id="@+id/sex_auto"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:inputType="none"
+                android:hint="@string/label_sex"
+                />
         </com.google.android.material.textfield.TextInputLayout>
+
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/new_password_text_input_layout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="@string/hint_old_password"
+            android:hint="@string/hint_new_password"
             app:layout_constraintBottom_toTopOf="@+id/old_password_text_input_layout"
-            app:layout_constraintTop_toBottomOf="@+id/email_text_input_layout"
+            app:layout_constraintTop_toBottomOf="@+id/sex_text_input_layout"
             app:layout_constraintStart_toStartOf="@+id/guideline_left"
             app:layout_constraintEnd_toEndOf="@+id/guideline_right"
             app:errorEnabled="true">
@@ -109,7 +113,7 @@
             android:id="@+id/old_password_text_input_layout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="@string/hint_new_password"
+            android:hint="@string/hint_old_password"
             app:layout_constraintBottom_toTopOf="@+id/register_button"
             app:layout_constraintTop_toBottomOf="@+id/new_password_text_input_layout"
             app:layout_constraintStart_toStartOf="@+id/guideline_left"
@@ -136,12 +140,11 @@
             style="@style/Widget.MaterialComponents.Button.TextButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toTopOf="@+id/delete_account_button"
-            app:layout_constraintTop_toBottomOf="@+id/register_button"
-            app:layout_constraintStart_toStartOf="@+id/guideline_left"
-            app:layout_constraintEnd_toEndOf="@+id/guideline_right"
             android:text="@string/button_back"
-            android:layout_marginBottom="@dimen/big_margin"/>
+            app:layout_constraintBottom_toTopOf="@+id/delete_account_button"
+            app:layout_constraintEnd_toEndOf="@+id/guideline_right"
+            app:layout_constraintStart_toStartOf="@+id/guideline_left"
+            app:layout_constraintTop_toBottomOf="@+id/register_button" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/delete_account_button"
