--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -6,6 +6,7 @@
             name="registerViewModel"
             type="com.trainingapp.viewmodels.RegisterViewModel" />
     </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -14,16 +15,15 @@
             android:id="@+id/guideline_left"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintGuide_begin="16dp"
-            android:orientation="vertical"/>
+            android:orientation="vertical"
+            app:layout_constraintGuide_begin="16dp" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_right"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintGuide_end="16dp"
-            android:orientation="vertical"/>
-
+            android:orientation="vertical"
+            app:layout_constraintGuide_end="16dp" />
 
 
         <com.google.android.material.textfield.TextInputLayout
@@ -31,10 +31,10 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:hint="@string/hint_username"
-            app:layout_constraintBottom_toTopOf="@+id/weight_text_input_layout"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/sex_text_input_layout"
+            app:layout_constraintEnd_toEndOf="@+id/guideline_right"
             app:layout_constraintStart_toStartOf="@+id/guideline_left"
-            app:layout_constraintEnd_toEndOf="@+id/guideline_right">
+            app:layout_constraintTop_toTopOf="parent">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/username_input"
@@ -43,17 +43,54 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/sex_text_input_layout"
+            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toTopOf="@+id/weight_text_input_layout"
+            app:layout_constraintEnd_toEndOf="@+id/guideline_right"
+            app:layout_constraintStart_toStartOf="@+id/guideline_left"
+            app:layout_constraintTop_toBottomOf="@+id/username_text_input_layout">
+
+            <AutoCompleteTextView
+                android:id="@+id/sex_auto"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="none"
+                android:hint="@string/label_sex"
+                />
+        </com.google.android.material.textfield.TextInputLayout>
+
+
+        <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/weight_text_input_layout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:hint="@string/hint_weight"
-            app:layout_constraintBottom_toTopOf="@+id/password_text_input_layout"
-            app:layout_constraintTop_toBottomOf="@+id/username_text_input_layout"
+            app:layout_constraintBottom_toTopOf="@+id/height_text_input_layout"
+            app:layout_constraintEnd_toEndOf="@+id/guideline_right"
             app:layout_constraintStart_toStartOf="@+id/guideline_left"
-            app:layout_constraintEnd_toEndOf="@+id/guideline_right">
+            app:layout_constraintTop_toBottomOf="@+id/sex_text_input_layout">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/weight_input"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="numberDecimal" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/height_text_input_layout"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:hint="@string/hint_height"
+            app:layout_constraintBottom_toTopOf="@+id/password_text_input_layout"
+            app:layout_constraintEnd_toEndOf="@+id/guideline_right"
+            app:layout_constraintStart_toStartOf="@+id/guideline_left"
+            app:layout_constraintTop_toBottomOf="@+id/weight_text_input_layout">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/height_input"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="numberDecimal" />
@@ -64,42 +101,40 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:hint="@string/hint_password"
+            app:errorEnabled="true"
             app:layout_constraintBottom_toBottomOf="@+id/register_button"
-            app:layout_constraintTop_toBottomOf="@+id/weight_text_input_layout"
-            app:layout_constraintStart_toStartOf="@+id/guideline_left"
             app:layout_constraintEnd_toEndOf="@+id/guideline_right"
-            app:errorEnabled="true">
+            app:layout_constraintStart_toStartOf="@+id/guideline_left"
+            app:layout_constraintTop_toBottomOf="@+id/height_text_input_layout">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/password_input"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="textPassword"/>
+                android:layout_height="60dp"
+                android:inputType="textPassword" />
         </com.google.android.material.textfield.TextInputLayout>
-
-
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/register_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="@string/button_register"
             app:layout_constraintBottom_toBottomOf="@+id/back_button"
-            app:layout_constraintTop_toBottomOf="@+id/password_text_input_layout"
-            app:layout_constraintStart_toStartOf="@+id/guideline_left"
             app:layout_constraintEnd_toEndOf="@+id/guideline_right"
-            android:text="@string/button_register" />
+            app:layout_constraintStart_toStartOf="@+id/guideline_left"
+            app:layout_constraintTop_toBottomOf="@+id/password_text_input_layout" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/back_button"
             style="@style/Widget.MaterialComponents.Button.TextButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/register_button"
-            app:layout_constraintStart_toStartOf="@+id/guideline_left"
-            app:layout_constraintEnd_toEndOf="@+id/guideline_right"
+            android:layout_marginBottom="@dimen/big_margin"
             android:text="@string/button_back"
-            android:layout_marginBottom="@dimen/big_margin"/>
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/guideline_right"
+            app:layout_constraintStart_toStartOf="@+id/guideline_left"
+            app:layout_constraintTop_toBottomOf="@+id/register_button" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
